--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,10 @@
 @import './common';
 @import './example';
+@import './subscribe-footer';
+@import './advantage';
+@import './header-hero';
+@import './how-its-made';
+@import './our-products';
+@import './reviews';
+@import './top-sellers';
+@import './unique-components';
