--- a/src/partials/unique-components.html
+++ b/src/partials/unique-components.html
@@ -4,8 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/src/sass/_unique-components.scss" />
 </head>
 <body>
-    
+    <section  class="unique-components">
+        <div class="container">
+            <div class="uc-head">
+                <h2 class="uc-h2">IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="h2-orange">TASTE</span> SENSATION</h2>
+                <p class="uc-description"> At Simply Chocolate, we believe that the secret to exceptional chocolate <br/> is in the details. From the sourcing of the
+                finest ingredients to the <br> careful crafting of each individual piece, every step of our process adds <br/> up to one
+                exceptional taste sensation.</p>
+            </div>
+            <ul class="uc-list">
+                <li class="uc-cards orange-border">
+                    <div class="uc-cards-img">
+                        <img class="img-card">
+                        <div class="uc-hover">
+                            <h3 class="uc-h3-hover">MILK CHOCOLATE</h3>
+                            <button></button>
+                            <button></button>
+                            <p>Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and milk. It is the most consumed type of
+                            chocolate. Chocolate was originally sold and consumed as a beverage in pre-Columbian times. Although four-fifths of all
+                            milk chocolate is sold in the United States and Europe.</p>
+                        </div>
+                    </div>
+                    <div></div>
+                    <div class="img-cap">
+                        <h3 class="caption">MILK CHOCOLATE</h3>
+                    </div>
+                </li>
+                <li class="uc-cards">
+                    <div class="uc-cards-img">
+                        <img class="img-card">
+                        <div class="uc-hover">
+                            <h3 class="uc-h3-hover">MILK</h3>
+                            <button></button>
+                            <button></button>
+                            <p> Milk is a white liquid food produced by the mammary glands of mammals. It is the primary source of nutrition for young
+                            mammals (including breastfed human infants) before they are able to digest solid food.Early-lactation milk, which is
+                            called colostrum, contains antibodies that strengthen the immune system.</p>
+                        </div>
+                    </div>
+                    <div></div>
+                    <div class="img-cap">
+                        <h3 class="caption">MILK</h3>
+                    </div>
+
+                </li>
+                <li class="uc-cards">
+                    <div class="uc-cards-img">
+                        <img class="img-card">
+                        <div class="uc-hover">
+                            <h3 class="uc-h3-hover">NUTS</h3>
+                            <button></button>
+                            <button></button>
+                            <p>
+                                Almonds, pistachios, and walnuts are some types of nuts that contain healthy nutrients. When eaten as part of a
+                                nutrient-dense diet, these 9 nuts may offer benefits such as reducing your risk of heart disease. They’re a good source
+                                of fiber, healthy fats, and plant protein. Plus, they’re great on their own.
+                            </p>
+                        </div>
+                    </div>
+                    <div></div>
+                    <div class="img-cap">
+                        <h3 class="caption">NUTS</h3>
+                    </div>
+                </li>
+                <li class="uc-cards">
+                    <div class="uc-cards-img">
+                        <img>
+                        <div class="uc-hover">
+                            <h3 class="uc-h3-hover">SEMI - SWEET CHOCOLATE</h3>
+                            <button></button>
+                            <button></button>
+                            <p>
+                                Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways to gain an understanding of this type
+                                of chocolate is to compare it to a different type of chocolate. Semisweet is darker than milk chocolate. In a taste
+                                comparison, it has a slightly bitter taste whereas milk chocolate is sweeter and more mellow.
+                            </p>
+                        </div>
+                    </div>
+                    <div></div>
+                    <div class="img-cap">
+                        <h3 class="caption">SEMI - SWEET CHOCOLATE</h3>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </section>
 </body>
 </html>
